# openid-tls-connector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  config.example.toml
deploy/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml
integration_tests/: README.md  conformance-config.json  docker-compose.yml  run-tests.sh  run.sh
integration_tests/conformance-nginx/: nginx.conf
integration_tests/oidc-provider/: signing_key.pem
integration_tests/op-nginx/: Dockerfile  nginx.conf
src/: lib.rs
src/oidc/: client.rs  discovery.rs  endpoints.rs  mod.rs  protocol.rs  router.rs  storage.rs  token.rs
src/oidc/code/: authorization_code.rs  code.rs  mod.rs  pkce.rs  signature.rs  timestamp.rs
src/users/: mod.rs
tests/: e2e.rs
tests/common/: mod.rs
