[package]
name = "openid-tls-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-macros = "0.5.0"
base64 = "0.22.1"
blake3 = "1.8.2"
ciborium = "0.2.2"
hmac = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
url = "2.5.4"
